Increased size of text box on profile page

--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -51,7 +51,7 @@
 
     <EditText
         android:layout_width="130dp"
-        android:layout_height="wrap_content"
+        android:layout_height="37dp"
         android:id="@+id/name"
         android:layout_gravity="left|center_vertical"
         android:background="#f7ffee"
@@ -60,20 +60,21 @@
 
     <EditText
         android:layout_width="130dp"
-        android:layout_height="wrap_content"
+        android:layout_height="37dp"
         android:id="@+id/weight"
         android:layout_gravity="left|center_vertical"
         android:background="#ecffea"
-        android:hint="Weight" />
+        android:hint="Weight"
+        android:layout_marginTop="15dp" />
 
     <EditText
         android:layout_width="130dp"
-        android:layout_height="wrap_content"
+        android:layout_height="37dp"
         android:id="@+id/height"
         android:layout_gravity="left|center_vertical"
         android:background="#f5ffee"
         android:hint="Height"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="70dp" />
 
     <TextView
         android:layout_width="wrap_content"
