--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -1,9 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
     >
+
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:id="@+id/graph" />
 
     <TextView
         android:layout_width="wrap_content"
