BodyBuilding Pages and Track Progress switched to scroll view

--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -4,7 +4,15 @@
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
     >
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -110,5 +118,9 @@
         android:text="BACK"
         android:id="@+id/BBBack"
         android:layout_gravity="left|bottom" />
+
+    </LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
