--- a/app/src/main/res/layout/fragment_body_building_day_five.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_five.xml
@@ -3,7 +3,18 @@
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayFive"
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
+
+
     >
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
 
 
     <TextView
@@ -111,5 +122,8 @@
         android:text="BACK"
         android:id="@+id/BBBack"
         android:layout_gravity="left|bottom" />
+    </LinearLayout>>
+
+</ScrollView>
 
 </FrameLayout>
