--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -6,7 +6,15 @@
 
     >
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -113,5 +121,8 @@
         android:text="BACK"
         android:id="@+id/BBBack"
         android:layout_gravity="left|bottom" />
+    </LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
