--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -7,6 +7,15 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -68,5 +77,7 @@
         android:text="BACK"
         android:id="@+id/Sday4BACK"
         android:layout_gravity="center_horizontal|bottom" />
+    </LinearLayout>>
 
+    </ScrollView>
 </FrameLayout>
