--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -8,6 +8,15 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            >
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,6 +78,9 @@
         android:text="BACK"
         android:id="@+id/Sday1BACK"
         android:layout_gravity="center_horizontal|bottom" />
+</LinearLayout>>
+
+    </ScrollView>
 
 
 </FrameLayout>
