--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -7,6 +7,16 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            >
+
 
     <TextView
     android:layout_width="wrap_content"
@@ -71,5 +81,8 @@
         android:text="BACK"
         android:id="@+id/Sday2BACK"
         android:layout_gravity="center_horizontal|bottom" />
+</LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
