Weight loss day 3 and 2 switched to scroll view

--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -5,7 +5,15 @@
     android:background="@drawable/background2"
     >
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -111,5 +119,9 @@
         android:text="BACK"
         android:id="@+id/WLBack"
         android:layout_gravity="left|bottom" />
+
+    </LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
