--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -5,18 +5,24 @@
     android:background="@drawable/background2"
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/linview"
+        >
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Nutrition Calculator"
         android:id="@+id/textView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="69dp"
         android:background="#070707"
         android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,47 +31,61 @@
         android:text="Enter Your Weight:"
         android:id="@+id/textView16"
         android:layout_gravity="left|center_vertical"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="67dp" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="219dp"
+        android:layout_height="30dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Maintain:"
         android:id="@+id/textView17"
         android:layout_gravity="center_horizontal|bottom"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/button3" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="171dp"
+        android:layout_height="30dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Gain:"
         android:id="@+id/textView18"
         android:layout_gravity="center_horizontal|bottom"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_below="@+id/textView17"
+        android:layout_alignStart="@+id/textView19" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="124dp"
+        android:layout_height="30dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Lose:"
         android:id="@+id/textView19"
         android:layout_gravity="center_horizontal|bottom"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_below="@+id/textView18"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="141dp"
         android:layout_height="wrap_content"
         android:text="Calculate"
         android:id="@+id/button3"
-        android:layout_gravity="right|bottom" />
+        android:layout_gravity="right|bottom"
+        android:layout_alignTop="@+id/NutBack"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
         android:id="@+id/NutBack"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="left|bottom" />
+
+    </RelativeLayout>
 
 </FrameLayout>
