--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -8,6 +8,17 @@
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -79,5 +90,9 @@
         android:text="Large Text"
         android:id="@+id/textView10"
         android:layout_gravity="left|top" />
+
+    </LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
