--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -8,6 +8,17 @@
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -68,5 +79,9 @@
         android:text="BACK"
         android:id="@+id/Sday4BACK"
         android:layout_gravity="center_horizontal|bottom" />
+
+    </LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
