--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -6,6 +6,15 @@
     android:background="@drawable/background2"
     >
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            >
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
@@ -26,4 +35,8 @@
         android:text="BACK"
         android:id="@+id/TPBack"
         android:layout_gravity="center_horizontal|bottom" />
+
+</LinearLayout>>
+
+    </ScrollView>
 </FrameLayout>
