--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -5,6 +5,15 @@
     android:background="@drawable/background2"
     >
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -112,5 +121,9 @@
         android:text="BACK"
         android:id="@+id/WLBack"
         android:layout_gravity="left|bottom" />
+
+    </LinearLayout>>
+
+    </ScrollView>
 
 </FrameLayout>
