--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -11,6 +11,15 @@
         android:clickable="true"
         android:contextClickable="false"
         android:onClick="ChangeFragment" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            >
 
     <Button
         android:layout_width="fill_parent"
@@ -75,6 +84,8 @@
         android:id="@+id/textView27"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
+</LinearLayout>>
 
+    </ScrollView>
 
 </FrameLayout>
