--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -4,6 +4,11 @@
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/linview"
+        android:layout_gravity="left|top">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,14 +16,18 @@
         android:text="POINTS"
         android:id="@+id/pointsHeadingView"
         android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Back"
         android:id="@+id/PointsBack"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="112dp"
@@ -26,42 +35,45 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="You have:"
         android:id="@+id/youHavePointsView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="121dp"
         android:background="#060605"
         android:layout_gravity="left|top"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_marginTop="27dp"
+        android:layout_below="@+id/pointsHeadingView"
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="157dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/PointsView"
-        android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff"
-        android:layout_marginTop="126dp"
         android:text="Points"
         android:textSize="20dp"
-        android:layout_marginRight="0dp" />
+        android:layout_above="@+id/arnoldQuote"
+        android:layout_toEndOf="@+id/youHavePointsView" />
 
     <TextView
         android:layout_width="347dp"
         android:layout_height="84dp"
         android:text="&quot;Strength does not come from winning. Your struggles develop your strengths. When you go through hardships and decide not to surrender, that is strength.&quot;"
         android:id="@+id/arnoldQuote"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
         android:textStyle="normal|bold|italic"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/youHavePointsView"/>
 
     <TextView
         android:layout_width="178dp"
         android:layout_height="92dp"
         android:text="-Arnold Schwarzenegger"
-        android:layout_marginTop="150dp"
         android:id="@+id/arnoldText"
         android:textColor="#ffffff"
-        android:layout_gravity="right|center_vertical" />#ffffff" />
+        android:layout_gravity="right|center_vertical"
+        android:layout_below="@+id/arnoldQuote"
+        android:layout_centerHorizontal="true" />#ffffff" />
+
+    </RelativeLayout>
 
 </FrameLayout>
