--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -5,6 +5,24 @@
     android:background="@drawable/background2"
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linview"
+        android:layout_gravity="center_horizontal|bottom">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MAX"
+            android:id="@+id/textView2"
+            android:layout_gravity="center_horizontal|top"
+            android:textColor="#fffef7"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,8 +31,11 @@
         android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:textIsSelectable="true"
-        android:layout_marginTop="15dp" />
+        android:layout_alignStart="@+id/MaxBack"
+        android:layout_below="@+id/textView2"
+
+
+         />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,7 +45,9 @@
         android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:layout_marginTop="100dp" />
+        android:layout_alignStart="@+id/MaxBack"
+        android:layout_below="@+id/benchText"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,7 +57,9 @@
         android:layout_gravity="left|top"
         android:textSize="20dp"
         android:textColor="#ffffff"
-        android:layout_marginTop="215dp" />
+        android:layout_alignStart="@+id/MaxBack"
+        android:layout_below="@+id/squatText"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,70 +69,86 @@
         android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:layout_marginTop="420dp" />
+        android:layout_alignStart="@+id/MaxBack"
+        android:layout_below="@+id/totalText"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
         android:id="@+id/MaxBack"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="191dp"
-        android:layout_height="85dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Big 3 Total:"
         android:id="@+id/totalText"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="-80dp"
         android:textColor="#ffffff"
-        android:textSize="35dp" />
+        android:textSize="35dp"
+        android:layout_below="@+id/deadliftText"
+        android:layout_alignStart="@+id/MaxBack"/>
 
     <TextView
-        android:layout_width="191dp"
-        android:layout_height="85dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/userTotal"
-        android:layout_gravity="center"
-        android:layout_marginBottom="-80dp"
         android:textColor="#ffffff"
         android:textSize="35dp"
         android:text="0"
-        android:layout_marginRight="-100dp" />
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/totalText"
+        android:layout_below="@+id/deadliftText"
+        />
 
     <TextView
-        android:layout_width="144dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/userDeadlift"
         android:layout_gravity="right|center_vertical"
         android:textSize="20dp"
         android:textColor="#ffffff"
-        android:layout_marginTop="-30dp"
-        android:layout_marginRight="11dp"
-        android:text="0" />
+        android:text="0"
+        android:layout_toEndOf="@+id/deadliftText"
+        android:layout_below="@+id/squatText"/>
 
     <TextView
-        android:layout_width="167dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/userSquat"
         android:layout_gravity="right|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="0dp"
-        android:text="0" />
+        android:text="0"
+        android:layout_toEndOf="@+id/squatText"
+        android:layout_below="@+id/benchText"/>
 
     <TextView
-        android:layout_width="183dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/userBench"
         android:layout_gravity="right|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:textIsSelectable="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="-10dp"
         android:text="0"
-        android:layout_marginLeft="20dp" />
+        android:layout_toEndOf="@+id/benchText"
+        android:layout_below="@+id/textView2"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/userTime"
+            android:layout_gravity="right|top"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:textIsSelectable="true"
+            android:text="0"
+            android:layout_toEndOf="@+id/mileText"
+            android:layout_below="@+id/totalText"/>
+
+</RelativeLayout>
 </FrameLayout>
