--- a/app/src/main/res/layout/fragment_fp__body__building.xml
+++ b/app/src/main/res/layout/fragment_fp__body__building.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=" Body Building "
-        android:id="@+id/textView13"
+        android:text="Body Building "
+        android:id="@+id/bodyBuildingTitle"
         android:background="#2113ff"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:text=" Day 1 "
         android:id="@+id/day1BodyBuilding"
-        android:layout_below="@+id/textView13"
+        android:layout_below="@+id/bodyBuildingTitle"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
