--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Nutrition Calculator"
-        android:id="@+id/textView3"
+        android:id="@+id/nutritionCalcTitle"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="69dp"
@@ -23,7 +23,7 @@
         android:layout_height="44dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Enter Your Weight:"
-        android:id="@+id/textView16"
+        android:id="@+id/enterWeightText"
         android:layout_gravity="left|center_vertical"
         android:textColor="#ffffff" />
 
@@ -32,7 +32,7 @@
         android:layout_height="219dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Maintain:"
-        android:id="@+id/textView17"
+        android:id="@+id/toMaintainText"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="#ffffff" />
 
@@ -41,7 +41,7 @@
         android:layout_height="171dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Gain:"
-        android:id="@+id/textView18"
+        android:id="@+id/toGainText"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="#ffffff" />
 
@@ -50,7 +50,7 @@
         android:layout_height="124dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="To Lose:"
-        android:id="@+id/textView19"
+        android:id="@+id/toLoseText"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="#ffffff" />
 
@@ -58,7 +58,7 @@
         android:layout_width="141dp"
         android:layout_height="wrap_content"
         android:text="Calculate"
-        android:id="@+id/button3"
+        android:id="@+id/calcButton"
         android:layout_gravity="right|bottom" />
 
     <Button
