--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Progress Tracker"
-        android:id="@+id/textView4"
+        android:id="@+id/progressTrackerTitle"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
 
