--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -12,75 +12,76 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:orientation="vertical"
             >
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Barbell Bench Press
     - Hepburn Method"
         android:id="@+id/benchText"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="175dp"
         android:textColor="#ffffff"
-        android:textSize="22dp" />
+        android:textSize="22dp"
+        android:layout_gravity="center_horizontal|top"/>
 
-    <TextView
-        android:layout_width="234dp"
-        android:layout_height="34dp"
-        android:text="Incline Barbell Press"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/benchDetail"
-        android:layout_gravity="left|center_vertical"
-        android:textColor="#ffffff"
-        android:textSize="22dp"/>
-
-    <TextView
-        android:layout_width="219dp"
-        android:layout_height="63dp"
-        android:text="Cable Flies"
-        android:id="@+id/flyText"
-        android:layout_gravity="bottom|center_vertical"
-        android:layout_marginBottom="150dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
-
-    <ImageView
-        android:layout_width="176dp"
-        android:layout_height="176dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="right|top"
-        android:layout_marginBottom="150dp"
-        android:src="@drawable/bench" />
-    <ImageView
-        android:layout_width="179dp"
-        android:layout_height="179dp"
-        android:id="@+id/incline"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginBottom="35dp"
-        android:src="@drawable/incline" />
-    <ImageView
-        android:layout_width="171dp"
-        android:layout_height="179dp"
-        android:id="@+id/flies"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="60dp"
-        android:src="@drawable/flies" />
-
-    <Button
+            <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/Sday1BACK"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:id="@+id/imageView"
+        android:src="@drawable/bench"
+        android:layout_toEndOf="@+id/benchText"
+        android:layout_below="@+id/benchText"
+                android:layout_gravity="center_horizontal|top"/>
 
-</LinearLayout>>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cable Flies"
+                android:id="@+id/flyText"
+                android:textColor="#ffffff"
+                android:textSize="25dp"
+                android:layout_below="@+id/imageView"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Incline Barbell Press"
+                android:id="@+id/benchDetail"
+                android:textColor="#ffffff"
+                android:textSize="22dp"
+                android:layout_below="@+id/flies"/>
+
+            <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/incline"
+        android:src="@drawable/incline"
+            android:layout_below="@+id/benchDetail"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/flies"
+        android:src="@drawable/flies"
+        android:layout_below="@+id/flyText"/>
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BACK"
+                android:id="@+id/Sday1BACK"
+                android:layout_gravity="left|bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true" />
+
+        </RelativeLayout>>
 
     </ScrollView>
+
 
 
 </FrameLayout>
