--- a/app/src/main/res/layout/fragment_strength_how_to.xml
+++ b/app/src/main/res/layout/fragment_strength_how_to.xml
@@ -9,13 +9,13 @@
         android:text="@string/hello_blank_fragment" />
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
-        >
+        />
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
